# HexoHub

./: .gitignore  LICENSE  README.md  electron-image-handler.js  electron-main-handlers.js  forge.config.js  installer.nsi  next.config.ts  package-lock.json  package.json  package_backup.json  pnpm-lock.yaml  server.ts  temp.txt  tsconfig.json
.github/workflows/: release.yml  release.yml.backup  tauri-release.yml.backup  unified-release.yml
docs/: ELECTRON_IMAGE_SETUP.md  INTEGRATION_GUIDE.md  PACKAGING.md  README.en.md  RELEASE_GUIDE.md  TAURI_DEVELOPMENT.md
public/: electron.js  installer.nsh
scripts/: check-version-sync.js  sync-version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  page.tsx.backup
src/components/: ai-analysis-dialog.tsx  ai-deep-imitation-dialog.tsx  ai-inspiration-dialog.tsx  ai-rewrite-dialog.tsx  ai-rewrite-menu.tsx  create-hexo-dialog.tsx  create-post-dialog.tsx  custom-titlebar.tsx  editor-context-menu.tsx  hexo-config.tsx  markdown-editor-backup.tsx  markdown-editor-electron.tsx  markdown-editor-wrapper.tsx  markdown-editor.tsx  markdown-preview.tsx  panel-settings.tsx  post-list-old.tsx  post-list.tsx  publish-stats.tsx  tag-cloud.tsx  update-checker.tsx
src/components/ui/: sidebar.tsx  toast.tsx
src/hooks/: use-toast.ts
src/lib/: clipboard.ts  desktop-api.ts  electron-image-api.ts  tauri-api.ts  utils.ts  windows-compat.ts
src/utils/: i18n.ts
