[package]
name = "hexohub"
version = "3.1.2"
description = "HexoHub Desktop Application - A modern Hexo blog management tool"
authors = ["HexoHub Project"]
license = "MIT"
repository = "https://github.com/forever218/HexoHub"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-http = "2.0"
tauri-plugin-clipboard-manager = "2"
encoding_rs = "0.8"
shell-words = "1.1"
tokio = "1.47.1"
